--- a/tumor/index.html
+++ b/tumor/index.html
@@ -84,7 +84,7 @@
     </div>
     <div  class="third">
       <small>
-        <!--Last rendered <strong id="render-speed"></strong> lines-->
+        Last rendered <strong id="render-speed"></strong> lines
       </small>
 	  	<p><br/>
 		
